Adapt IDE Probe lifecycle validation to IntelliJ 261